kubernetes/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-server
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: go-web-server
